bundled_metadata/force-app/main/default/objects/Task_Scheduler_Configuration__c/Task_Scheduler_Configuration__c.object-meta.xml
<CustomObject>
    <label>Task Scheduler Configuration</label>
    <nameField>
        <label>Task Scheduler Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Scheduler Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>