bundled_metadata/force-app/main/default/objects/Task_Scheduler_Configuration__c/fields/Assessment_Task_Definition__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Task_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assessment Task Definition</label>
    <referenceTo>AssessmentTaskDefinition</referenceTo>
    <relationshipLabel>Task Scheduler Configurations</relationshipLabel>
    <relationshipName>Task_Scheduler_Configurations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>