bundled_metadata/force-app/main/default/objects/Task_Scheduler_Configuration__c/fields/L1_Channel__c.field-meta.xml
<CustomField>
    <fullName>L1_Channel__c</fullName>
    <label>L1 Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L1_Channel</valueSetName>
    </valueSet>
</CustomField>