bundled_metadata/force-app/main/default/objects/Task_Scheduler_Configuration__c/fields/L2_Subchannel__c.field-meta.xml
<CustomField>
    <fullName>L2_Subchannel__c</fullName>
    <label>L2 Subchannel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L2_Subchannel</valueSetName>
    </valueSet>
</CustomField>