bundled_metadata/force-app/main/default/objects/Task_Scheduler_Configuration__c/fields/Visit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Visit_Frequency__c</fullName>
    <label>Visit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Visit</fullName>
            </value>
            <value>
                <fullName>Every 2 Visits</fullName>
            </value>
            <value>
                <fullName>Every 3 Visits</fullName>
            </value>
            <value>
                <fullName>Every 4 Visits</fullName>
            </value>
            <value>
                <fullName>Every 12 Visits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>